--- a/slidy.html
+++ b/slidy.html
@@ -98,5 +98,13 @@
 <li>Be ready to deal with missing data!</li>
 </ul>
 </div>
+<div id="problems-and-limitations" class="slide section level1">
+<h1>Problems and limitations</h1>
+<ul>
+<li>OpenStreetMap contributors tend to come from wealthy Western countries, and the data reflects that</li>
+<li>Missing data</li>
+<li>Inconsistencies in feature tagging</li>
+</ul>
+</div>
 </body>
 </html>
